--- a/parsecExample/package.yaml
+++ b/parsecExample/package.yaml
@@ -22,6 +22,12 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - parsec
+- hedgehog
+- HUnit
+- tasty
+- tasty-hedgehog
+- tasty-hunit
+- tasty-discover
 
 library:
   source-dirs: src
@@ -39,7 +45,7 @@ executables:
 
 tests:
   parsecExample-test:
-    main:                Spec.hs
+    main:                Test.hs
     source-dirs:         test
     ghc-options:
     - -threaded
